# ecat-client-advr

./: .buildinfo  CMakeLists.txt  README.md  background.html  ec_client.html  ec_client_block.html  ec_client_gui.html  genindex.html  index.html  installation.html  objects.inv  package.xml  search.html  searchindex.js  wsl.html
_sources/: ec_client.rst.txt  (+6 more)
src/ec_client_ros/ec_gui/: CMakeLists.txt
src/ec_client_ros/ec_gui/src/: ec_gui_main.cpp  ec_gui_start.h
src/ec_client_ros/ec_gui/src/master/: master_cmd_widget.cpp  master_cmd_widget.ui
src/ec_client_ros/ec_gui/src/pdo/: pdo_resources.qrc  pdo_widget.h  pdo_widget.ui
src/ec_client_ros/ec_gui/src/slave/: joint_widget.cpp  slave_cmd_widget.cpp  slave_resources.qrc  slave_widget.h  slave_widget.ui  slider_widget.h  slider_widget.ui  sliders_widget.h  sliders_widget.ui
src/ec_client_udp/: CMakeLists.txt
src/ec_client_udp/src/UDP_Client/: client.cpp  client.h
src/ec_client_udp/src/Utils/: ec_client_utils.cpp  ec_client_utils.h
src/ec_client_udp/src/config/joint_map/: mirror_joint_map.yaml
src/ec_client_udp/src/ec_client_main/: CMakeLists.txt
src/ec_client_udp/src/ec_gui/: CMakeLists.txt
src/ec_client_udp/src/ec_gui/src/: Utils.h  ec_gui_main.cpp  ec_gui_start.cpp  ec_gui_start.h  ec_gui_start.ui  slider_widget.h  slider_widget.ui  slider_widget_calib.cpp  slider_widget_calib.h
src/ec_client_udp/tests/: frequency_test_incremental.txt
src/examples/: CMakeLists.txt
src/examples/ec_dummy/: CMakeLists.txt
src/examples/ec_dummy/src/: ec_dummy.cpp  nrt_esc_zmq.h  rt_esc_pipe.h  rt_motor.h
src/examples/ec_dummy/src/pb/: esc_pb.h
src/examples/ec_dummy/src/pb/imu/: imu_pb.h
src/examples/ec_dummy/src/pb/motor/: motor_pb.h
src/examples/ec_dummy/src/pb/pump/: pump_pb.h
src/examples/ec_dummy/src/pb/valve/: valve_pb.h
src/examples/ec_frequency_test/: CMakeLists.txt
src/examples/ec_frequency_test/src/: ec_frequency_test.cpp
src/examples/ec_general_trajectory/: CMakeLists.txt
src/examples/ec_general_trajectory/src/: ec_general_trajectory.cpp
src/examples/ec_gravity_compensation/: CMakeLists.txt
src/examples/ec_gravity_compensation/src/: ec_gravity_compensation.cpp
src/examples/ec_hydraulic/: CMakeLists.txt
src/examples/ec_hydraulic/src/: ec_hydraulic.cpp
src/examples/ec_rt_code/: CMakeLists.txt
src/examples/ec_rt_code/src/: data_cb_handler.cpp  data_cb_handler.h  ec_rt_code.cpp  ec_rt_trajectory.cpp  ec_rt_trajectory.h  rt_thread.cpp  rt_thread.h
src/examples/ec_simple_trajectory/: CMakeLists.txt
src/examples/ec_simple_trajectory/src/: ec_simple_trajectory.cpp
src/examples/gravity_compensation/: CMakeLists.txt
src/examples/gravity_compensation/src/: ec_gravity_compensation.cpp
src/examples/rt_code/src/: ec_simulator.cpp
src/examples/simple_trajectory/src/: ec_client_freq_test.cpp  ec_client_main.cpp  ping_pong_test.cpp
src/gui/ec_gui/: CMakeLists.txt
src/gui/ec_gui/src/: ec_gui_main.cpp  ec_gui_start.cpp  ec_gui_start.h  ec_gui_start.ui  ec_gui_start_resources.qrc  ec_pdo_read.h  slider_widget.cpp  slider_widget.h
src/gui/ec_gui/src/___old_gui/: ec_gui_start22.ui
src/gui/ec_gui/src/command/: ec_gui_cmd.cpp  ec_gui_cmd.h
src/gui/ec_gui/src/component/slider/: ec_gui_slider.cpp  ec_gui_slider.h  slider_widget.cpp  slider_widget.h  slider_widget.ui  slider_widget_calib.cpp  slider_widget_calib.h  slider_widget_calib.ui  slider_window.cpp  slider_window.h  slider_window.ui  wave_widget.cpp  wave_widget.h  wave_widget.ui
src/gui/ec_gui/src/component/terminal/: ec_gui_terminal.cpp  ec_gui_terminal.h  ec_gui_terminal.ui
src/gui/ec_gui/src/components/: slider_widget.cpp  slider_widget.ui  slider_widget_calib.cpp  slider_widget_calib.h
src/gui/ec_gui/src/network/: ec_gui_net.cpp  ec_gui_net.h
src/gui/ec_gui/src/pdo/: ec_gui_pdo.cpp  ec_gui_pdo.h  ec_pdo_read.h
src/gui/ec_gui/src/sdo/: ec_gui_sdo.cpp  ec_gui_sdo.h  sdo_widget.txt
src/gui/ec_gui/src/wrapper/: ec_gui_wrapper.cpp  ec_gui_wrapper.h
src/gui/ec_gui_ros/src/slave/: CMakeLists.txt  joint_widget.h  joint_widget.ui  slave_cmd_widget.h  slave_cmd_widget.ui  slave_widget.cpp  slider_widget.cpp  sliders_widget.cpp
src/matlab/ec_block/: CMakeLists.txt
src/matlab/ec_block/cmake/: Managers.cmake  Sensors.cmake  Utilities.cmake  manager.cmake
src/matlab/ec_block/include/Managers/: FloatingBase.h  Gravity.h  MechanicalLimits.h  ModelManager.h  Readings.h  References.h  RobotManager.h  SensorManager.h
src/matlab/ec_block/include/Sensors/: ForceTorque.h  IMU.h
src/matlab/ec_block/include/Utilities/: COM.h  Dynamics.h  Jacobian.h  Kinematics.h  Pose.h  Twist.h
src/matlab/ec_block/include/common/: ec_block_utils.h
src/matlab/ec_block/include/manager/: ec_manager.h  ec_reading.h  ec_reference.h  reading.h  reference.h  robot_manager.h
src/matlab/ec_block/include/power/: ec_pow.h
src/matlab/ec_block/include/sensor/: ec_ft.h  ec_imu.h
src/matlab/ec_block/matlab/EcBlockToolbox/: EcBlockToolbox.slx  EcBlockToolbox_gen.prj  Utilities.slx  slblocks.m
src/matlab/ec_block/matlab/Models_Example/Tasks/: CartesianSpace_Task.slx  GravityCompensation_Task.slx  JointSpace_Task_v2.slx
src/matlab/ec_block/matlab/XBotBlockToolbox/: Sensors.slx  Utilities.slx  XBotBlockToolbox.slx  XBotBlockToolbox_gen.prj  XBotBlockToolbox_vf0.1.mltbx  slblocks.m
src/matlab/ec_block/matlab/script/: generate_rt_plugin.m  model_name_plugin.cpp  model_name_plugin.h
src/matlab/ec_block/src/Managers/: FloatingBase.cpp  Gravity.cpp  MechanicalLimits.cpp  ModelManager.cpp  Readings.cpp  References.cpp  RobotManager.cpp  SensorManager.cpp
src/matlab/ec_block/src/Sensors/: ForceTorque.cpp  IMU.cpp
src/matlab/ec_block/src/Utilities/: COM.cpp  Dynamics.cpp  Jacobian.cpp  Kinematics.cpp  Pose.cpp  Twist.cpp
src/matlab/ec_block/src/common/: ec_block_utils.cpp
src/matlab/ec_block/src/manager/: ec_manager.cpp  ec_reading.cpp  ec_reference.cpp  reading.cpp  reference.cpp  robot_manager.cpp
src/matlab/ec_block/src/power/: ec_pow.cpp
src/matlab/ec_block/src/sensor/: ec_ft.cpp  ec_imu.cpp
src/protocols/ros/ros_server/: CMakeLists.txt
(+1243 files in other folders)
