<?xml version="1.0"?>
<package format="3">
  <name>ecat_client</name>
  <version>0.0.1</version>
  <description>ADVR EtherCAT client</description>

  <maintainer email="todo@iit.it">Todo</maintainer>
  <license>Todo</license>

  <exec_depend>ecat_third_party</exec_depend>
  <build_depend>ecat_third_party</build_depend>

  <exec_depend>ecat_master</exec_depend>
  <build_depend>ecat_master</build_depend>

  <buildtool_depend>cmake</buildtool_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>